Alot of pre work
Inv Widget working
Weapon wheel working
Enemy System is ready to be build
 and sum more stuff

--- a/InfluencePackage/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/InfluencePackage/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -299,26 +299,31 @@ UserDefinedStruct=UserDefinedStruct.DefaultValues.PlayerSettings_43_3608660E4577
 InputMappingContext=InputMappingContext.Mappings.ActionMappings./Game/influence/AdriaanDevPlace/NewInfuence_Coree/Input/IA_Inputs/IA_Look.IA_Look,InputMappingContext.Mappings.ActionMappings,
 BlendSpace1D=BlendSpace1D.BlendSamples.GroupName,BlendSpace1D.Axis Settings.Horizontal Axis,
 CameraComponent=CameraComponent.PostProcess.Lens,Camera_C.Physics.ConstraintsGroup,
-CapsuleComponent=Camera_C.Physics.ConstraintsGroup,
+CapsuleComponent=Camera_C.Physics.ConstraintsGroup,CameraComponent.PostProcess.Lens,
 Camera_C=Camera_C.Physics.ConstraintsGroup,
-SkeletalMeshComponent=Camera_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,
+SkeletalMeshComponent=Camera_C.Physics.ConstraintsGroup,CameraComponent.PostProcess.Lens,SkeletalMeshComponent.Collision.Collision,
 StaticMeshComponent=Camera_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,
-K2Node_VariableGet=Camera_C.Physics.ConstraintsGroup,CameraComponent.PostProcess.Lens,
+K2Node_VariableGet=Camera_C.Physics.ConstraintsGroup,CameraComponent.PostProcess.Lens,SkeletalMeshComponent.Collision.Collision,
 SceneComponent=Camera_C.Physics.ConstraintsGroup,CameraComponent.PostProcess.Lens,
 NewCam_C=Camera_C.Physics.ConstraintsGroup,
 Test_House_C=Camera_C.Physics.ConstraintsGroup,
 CamSwitch_C=Camera_C.Physics.ConstraintsGroup,
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
-IF_Character_C=Camera_C.Physics.ConstraintsGroup,CameraComponent.PostProcess.Lens,
+IF_Character_C=Camera_C.Physics.ConstraintsGroup,CameraComponent.PostProcess.Lens,SkeletalMeshComponent.Collision.Collision,
 ArrowComponent=Camera_C.Physics.ConstraintsGroup,
-Enemy_Main_C=Camera_C.Physics.ConstraintsGroup,
-Landscape=Camera_C.Physics.ConstraintsGroup,
+Enemy_Main_C=Camera_C.Physics.ConstraintsGroup,CameraComponent.PostProcess.Lens,
+Landscape=Camera_C.Physics.ConstraintsGroup,CameraComponent.PostProcess.Lens,
 StaticMeshActor=Camera_C.Physics.ConstraintsGroup,
 K2Node_FunctionEntry=Camera_C.Physics.ConstraintsGroup,
 SphereComponent=Camera_C.Physics.ConstraintsGroup,
 K2Node_VariableSet=Camera_C.Physics.ConstraintsGroup,CameraComponent.PostProcess.Lens,
-K2Node_CallFunction=Camera_C.Physics.ConstraintsGroup,
+K2Node_CallFunction=Camera_C.Physics.ConstraintsGroup,CameraComponent.PostProcess.Lens,SkeletalMeshComponent.Collision.Collision,
 PropertyWrapper=Camera_C.Physics.ConstraintsGroup,CameraComponent.PostProcess.Lens,
+EdGraph=Camera_C.Physics.ConstraintsGroup,CameraComponent.PostProcess.Lens,
+EdGraphNode_Comment=Camera_C.Physics.ConstraintsGroup,CameraComponent.PostProcess.Lens,
+PlayerController=Camera_C.Physics.ConstraintsGroup,CameraComponent.PostProcess.Lens,SkeletalMeshComponent.Collision.Collision,
+K2Node_CustomEvent=Camera_C.Physics.ConstraintsGroup,CameraComponent.PostProcess.Lens,
+K2Node=Camera_C.Physics.ConstraintsGroup,CameraComponent.PostProcess.Lens,
 
 [EditorStartup]
 LastLevel=/Game/influence/AdriaanDevPlace/MAP/DevMapAdriaan
@@ -328,28 +333,29 @@ CleanShutdown=False
 OpenAssetsAtExit=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Char/IF_Character.IF_Character
 OpenAssetsAtExit=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Enemy/Enemy_Main.Enemy_Main
 OpenAssetsAtExit=/Game/90s_Style_Graphics/DemoContent/Characters/Piney_Senior/Piney_Senior.Piney_Senior
+OpenAssetsAtExit=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Char/Widgets/WGT_WeaponWheel.WGT_WeaponWheel
 
 [ContentBrowserRecent]
-MRUItem0=/Game/90s_Style_Graphics/DemoContent/Characters/Piney_Senior/Piney_Senior
-MRUItem1=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Enemy/Enemy_Main
-MRUItem2=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Char/IF_Character
-MRUItem3=/Game/influence/AdriaanDevPlace/MAP/DevMapAdriaan
-MRUItem4=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Assets/Actor/CamSwitch
-MRUItem5=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Assets/Actor/Test_House
-MRUItem6=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Assets/Actor/Camera
-MRUItem7=/Game/90s_Style_Graphics/Characters/Animations/Actor/Actor_AnimBP
-MRUItem8=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Char/Animations/IF_Blendspace
-MRUItem9=/Game/90s_Style_Graphics/Characters/Animations/Actor/Actor_IdleRun_2D
-MRUItem10=/Game/90s_Style_Graphics/Characters/Animations/Player/Player_IdleRun_2D
-MRUItem11=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Char/Animations/NewBlendSpace1D
-MRUItem12=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Char/Animations/NewAnimBlueprint
-MRUItem13=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Input/IA_Inputs/IA_Look
-MRUItem14=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Input/IA_Inputs/IA_Move
-MRUItem15=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Input/IMP/AllMayorKeyInputs
-MRUItem16=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/IF_Character
-MRUItem17=/Game/HorrorEngine/HE_GameplaySettings
-MRUItem18=/Game/HorrorEngine/Blueprints/Core/HorrorEngineFunctions
-MRUItem19=/Game/HorrorEngine/Blueprints/Core/HorrorEngineCharacter
+MRUItem0=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Char/Widgets/WGT_WeaponWheel
+MRUItem1=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Char/Widgets/WGT_Inventory
+MRUItem2=/Game/90s_Style_Graphics/DemoContent/Characters/Piney_Senior/Piney_Senior
+MRUItem3=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Enemy/Enemy_Main
+MRUItem4=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Char/IF_Character
+MRUItem5=/Game/influence/AdriaanDevPlace/MAP/DevMapAdriaan
+MRUItem6=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Assets/Actor/CamSwitch
+MRUItem7=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Assets/Actor/Test_House
+MRUItem8=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Assets/Actor/Camera
+MRUItem9=/Game/90s_Style_Graphics/Characters/Animations/Actor/Actor_AnimBP
+MRUItem10=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Char/Animations/IF_Blendspace
+MRUItem11=/Game/90s_Style_Graphics/Characters/Animations/Actor/Actor_IdleRun_2D
+MRUItem12=/Game/90s_Style_Graphics/Characters/Animations/Player/Player_IdleRun_2D
+MRUItem13=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Char/Animations/NewBlendSpace1D
+MRUItem14=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Char/Animations/NewAnimBlueprint
+MRUItem15=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Input/IA_Inputs/IA_Look
+MRUItem16=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Input/IA_Inputs/IA_Move
+MRUItem17=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Input/IMP/AllMayorKeyInputs
+MRUItem18=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/IF_Character
+MRUItem19=/Game/HorrorEngine/HE_GameplaySettings
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -364,7 +370,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.749049664
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/90s_Style_Graphics/DemoContent/Characters/Piney_Senior
+ContentBrowserDrawer.SelectedPaths=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Char/Widgets/IMG
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1773,6 +1779,46 @@ SphereComponent.ComponentReplication=True
 SphereComponent.Cooking=True
 SphereComponent.Events=True
 K2Node_VariableSet.Events=True
+Enemy_Main_C.Default=True
+CanvasPanel.Behavior=True
+CanvasPanel.Accessibility=True
+CanvasPanel.Render Transform=True
+CanvasPanel.Performance=True
+CanvasPanel.Clipping=True
+CanvasPanel.Navigation=True
+CanvasPanel.Localization=True
+TextBlock.Layout=True
+TextBlock.Content=True
+TextBlock.Appearance=True
+TextBlock.Accessibility=True
+TextBlock.Performance=True
+TextBlock.Clipping=True
+TextBlock.Wrapping=True
+TextBlock.Behavior=True
+TextBlock.Render Transform=True
+TextBlock.Navigation=True
+TextBlock.Localization=True
+Image.Layout=True
+Image.Appearance=True
+Image.Accessibility=True
+Image.Behavior=True
+Image.Render Transform=True
+Image.Performance=True
+Image.Clipping=True
+Image.Navigation=True
+Image.Localization=True
+Image.Events=True
+Button.Layout=True
+Button.Appearance=True
+Button.Interaction=True
+Button.Accessibility=True
+Button.Behavior=True
+Button.Render Transform=True
+Button.Performance=True
+Button.Clipping=True
+Button.Navigation=True
+Button.Localization=True
+Button.Events=True
 
 [WorldBrowser]
 DisplayPaths=False
@@ -3067,6 +3113,15 @@ ProjectileMovementComponent="\"Object\" "
 ArrowComponent="\"Object\" "
 SphereComponent="\"Object\" "
 BoneProxy="\"Object\" "
+CanvasPanel="\"Object\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransform.Shear\" \"Object.Render Transform.RenderTransformPivot\" "
+PanelWidget="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransform.Shear\" \"Object.Render Transform.RenderTransformPivot\" "
+Widget="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransform.Shear\" \"Object.Render Transform.RenderTransformPivot\" "
+Visual="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransform.Shear\" \"Object.Render Transform.RenderTransformPivot\" "
+TextBlock="\"Object\" "
+TextLayoutWidget="\"Object\" "
+Image="\"Object\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransform.Shear\" \"Object.Render Transform.RenderTransformPivot\" "
+Button="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransform.Shear\" \"Object.Render Transform.RenderTransformPivot\" "
+ContentWidget="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransform.Shear\" \"Object.Render Transform.RenderTransformPivot\" "
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -3546,4 +3601,73 @@ DeleteConfirmationVariable_Warning=False
 [DetailCategoriesAdvanced]
 CameraComponent.CameraOptions=False
 SkeletalMeshComponent.Physics=True
+
+[UMGEditor.Designer]
+PreviewWidth=1280
+PreviewHeight=720
+PreviewAspectRatio=16:9
+bIsInPortraitMode=False
+ProfileName=
+ScaleFactor=1
+bCanPreviewSwapAspectRatio=False
+
+[UMGSequencerSettings SequencerSettings]
+AutoChangeMode=None
+AllowEditsMode=AllEdits
+KeyGroupMode=KeyChanged
+KeyInterpolation=Auto
+bAutoSetTrackDefaults=False
+SpawnPosition=SSP_Origin
+bCreateSpawnableCameras=True
+bShowRangeSlider=False
+bIsSnapEnabled=True
+bSnapKeyTimesToInterval=True
+bSnapKeyTimesToKeys=True
+bSnapSectionTimesToInterval=True
+bSnapSectionTimesToSections=True
+bSnapKeysAndSectionsToPlayRange=False
+bSnapPlayTimeToKeys=False
+bSnapPlayTimeToSections=False
+bSnapPlayTimeToMarkers=False
+bSnapPlayTimeToInterval=True
+bSnapPlayTimeToPressedKey=True
+bSnapPlayTimeToDraggedKey=True
+bSnapCurveValueToInterval=False
+bShowSelectedNodesOnly=False
+bRewindOnRecord=False
+bLeftMouseDragDoesMarquee=False
+ZoomPosition=SZP_CurrentTime
+bAutoScrollEnabled=False
+bLinkCurveEditorTimeRange=False
+bSynchronizeCurveEditorSelection=True
+bIsolateCurveEditorToSelection=True
+LoopMode=SLM_NoLoop
+bKeepCursorInPlayRangeWhileScrubbing=False
+bKeepPlayRangeInSectionBounds=True
+ZeroPadFrames=0
+JumpFrameIncrement=(Value=5)
+bShowLayerBars=True
+bShowKeyBars=True
+bInfiniteKeyAreas=False
+bShowChannelColors=False
+bShowStatusBar=True
+bShowTickLines=True
+bShowSequencerToolbar=True
+KeyAreaCurveExtents=
+KeyAreaHeightWithCurves=15.000000
+ReduceKeysTolerance=0.000100
+bDeleteKeysWhenTrimming=True
+bDisableSectionsAfterBaking=True
+bCleanPlaybackMode=True
+bActivateRealtimeViewports=True
+bEvaluateSubSequencesInIsolation=False
+bRerunConstructionScripts=True
+bShowDebugVisualization=False
+bVisualizePreAndPostRoll=True
+bCompileDirectorOnEvaluate=False
+TrajectoryPathCap=250
+FrameNumberDisplayFormat=Seconds
+MovieRendererName=
+bAutoExpandNodesOnSelection=True
+TreeViewWidth=0.300000
 
