--- a/InfluencePackage/Saved/Config/WindowsEditor/Engine.ini
+++ b/InfluencePackage/Saved/Config/WindowsEditor/Engine.ini
@@ -67,11 +67,6 @@ EnableTunnel=False
 TunnelUnicastEndpoint=
 TunnelMulticastEndpoint=
 
-[WindowsApplication.Accessibility]
-StickyKeysHotkey=True
-ToggleKeysHotkey=True
-FilterKeysHotkey=True
-StickyKeysConfirmation=True
-ToggleKeysConfirmation=True
-FilterKeysConfirmation=True
+[/Script/UnrealEd.EditorEngine]
+FlipNormalMapGreenChannel=False
 
