Made a few changes
Changed startup map to My devmap So you guys can easeley sea the changes

And started the save game setup

--- a/InfluencePackage/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/InfluencePackage/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -304,7 +304,7 @@ Camera_C=Camera_C.Physics.ConstraintsGroup,
 SkeletalMeshComponent=Camera_C.Physics.ConstraintsGroup,CameraComponent.PostProcess.Lens,SkeletalMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,
 StaticMeshComponent=Camera_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,CameraComponent.PostProcess.Lens,SkeletalMeshComponent.Collision.Collision,
 K2Node_VariableGet=Camera_C.Physics.ConstraintsGroup,CameraComponent.PostProcess.Lens,SkeletalMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,
-SceneComponent=Camera_C.Physics.ConstraintsGroup,CameraComponent.PostProcess.Lens,SkeletalMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,
+SceneComponent=
 NewCam_C=Camera_C.Physics.ConstraintsGroup,
 Test_House_C=Camera_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,CameraComponent.PostProcess.Lens,SkeletalMeshComponent.Collision.Collision,
 CamSwitch_C=Camera_C.Physics.ConstraintsGroup,CameraComponent.PostProcess.Lens,SkeletalMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,
@@ -343,19 +343,16 @@ K2Node_FunctionResult=Camera_C.Physics.ConstraintsGroup,CameraComponent.PostProc
 LastLevel=/Game/influence/AdriaanDevPlace/MAP/DevMapAdriaan
 
 [AssetEditorSubsystem]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/influence/Environment_Assets/doorway/Doorway.Doorway
-OpenAssetsAtExit=/Game/influence/Environment_Assets/Door/BP_DoorLocket.BP_DoorLocket
-OpenAssetsAtExit=/Game/influence/Environment_Assets/Door/BP_Door.BP_Door
+CleanShutdown=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/influence/Environment_Assets/doorway/Doorway_SM
-MRUItem1=/Game/influence/Environment_Assets/doorway/Doorway
-MRUItem2=/Game/influence/Environment_Assets/Door/BP_Door
-MRUItem3=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Char/Inv_Items/keys/Master_Key
-MRUItem4=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Char/Inv_Items/keys/key1
-MRUItem5=/Game/influence/Environment_Assets/Door/BP_DoorLocket
-MRUItem6=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Char/Inventory_syst/Invetory
+MRUItem0=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Char/Inventory_syst/Invetory
+MRUItem1=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Char/Inv_Items/keys/key1
+MRUItem2=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Char/Inv_Items/keys/Master_Key
+MRUItem3=/Game/influence/Environment_Assets/doorway/Doorway_SM
+MRUItem4=/Game/influence/Environment_Assets/doorway/Doorway
+MRUItem5=/Game/influence/Environment_Assets/Door/BP_Door
+MRUItem6=/Game/influence/Environment_Assets/Door/BP_DoorLocket
 MRUItem7=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Char/IF_Character
 MRUItem8=/Game/influence/Environment_Assets/InteractionSyst/Interact_IF
 MRUItem9=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Char/Inventory_syst/Inventory_Struct
@@ -1943,13 +1940,262 @@ K2Node_MakeStruct.PinOptions=True
 Invetory_C.Default=True
 IF_Character_C.keys=True
 Master_Key_C.Default=True
+TextRenderComponent.Variable=True
+TextRenderComponent.TransformCommon=True
+TextRenderComponent.Sockets=True
+TextRenderComponent.Materials=True
+TextRenderComponent.Text=True
+TextRenderComponent.Rendering=True
+TextRenderComponent.HLOD=True
+TextRenderComponent.ComponentTick=True
+TextRenderComponent.Navigation=True
+TextRenderComponent.Lighting=True
+TextRenderComponent.Tags=True
+TextRenderComponent.ComponentReplication=True
+TextRenderComponent.Cooking=True
+TextRenderComponent.Events=True
+EditorStyleSettings.Theme=True
+EditorStyleSettings.UserInterface=True
+EditorStyleSettings.Accessibility=True
+EditorStyleSettings.Graphs=True
+AudioEditorSettings.AssetMenu=True
+BlueprintEditorSettings.Workflow=True
+BlueprintEditorSettings.VisualStyle=True
+BlueprintEditorSettings.Compiler=True
+BlueprintEditorSettings.DeveloperTools=True
+BlueprintEditorSettings.Performance=True
+BlueprintEditorSettings.Play=True
+EnhancedInputEditorSettings.Logging=True
+EnhancedInputEditorSettings.Editor=True
+EditorExperimentalSettings.Performance=True
+EditorExperimentalSettings.HDR=True
+EditorExperimentalSettings.Foliage=True
+EditorExperimentalSettings.Tools=True
+EditorExperimentalSettings.UserInterface=True
+EditorExperimentalSettings.Blueprints=True
+EditorExperimentalSettings.Cooking=True
+EditorExperimentalSettings.PIE=True
+EditorExperimentalSettings.LightingBuilds=True
+EditorExperimentalSettings.Core=True
+EditorExperimentalSettings.Materials=True
+EditorExperimentalSettings.Content Browser=True
+EditorExperimentalSettings.Level=True
+EditorSettings.DerivedDataCache=True
+EditorSettings.Derived Data Cache Notifications=True
+EditorSettings.Derived Data Cache S3=True
+EditorKeyboardShortcutSettings.AdvancedPreviewScene=True
+EditorKeyboardShortcutSettings.AnimGraph=True
+EditorKeyboardShortcutSettings.AnimSequenceCurveEditor=True
+EditorKeyboardShortcutSettings.AnimViewportLODCmd=True
+EditorKeyboardShortcutSettings.AnimViewportMenu=True
+EditorKeyboardShortcutSettings.AnimViewportPlayback=True
+EditorKeyboardShortcutSettings.AnimViewportShowCmd=True
+EditorKeyboardShortcutSettings.AssetEditor=True
+EditorKeyboardShortcutSettings.AssetManagerEditorCommands=True
+EditorKeyboardShortcutSettings.BlueprintDebugger=True
+EditorKeyboardShortcutSettings.BlueprintEditor=True
+EditorKeyboardShortcutSettings.BlueprintEditorSpawnNodes=True
+EditorKeyboardShortcutSettings.CameraShakePreviewer=True
+EditorKeyboardShortcutSettings.ChaosCacheEditor=True
+EditorKeyboardShortcutSettings.ClothPainterTools=True
+EditorKeyboardShortcutSettings.ClothPainter=True
+EditorKeyboardShortcutSettings.TakeRecorderSources=True
+EditorKeyboardShortcutSettings.GenericCommands=True
+EditorKeyboardShortcutSettings.EditorViewport=True
+EditorKeyboardShortcutSettings.ContentBrowser=True
+EditorKeyboardShortcutSettings.GenericCurveEditor=True
+EditorKeyboardShortcutSettings.CurveEditorTools=True
+EditorKeyboardShortcutSettings.DerivedDataSettings=True
+EditorKeyboardShortcutSettings.TabCommands=True
+EditorKeyboardShortcutSettings.ControlRigStack=True
+EditorKeyboardShortcutSettings.BlueprintFavoritesPalette=True
+EditorKeyboardShortcutSettings.FoliageEditMode=True
+EditorKeyboardShortcutSettings.FractureEditor=True
+EditorKeyboardShortcutSettings.FullBlueprintEditor=True
+EditorKeyboardShortcutSettings.GeometryCollectionSelection=True
+EditorKeyboardShortcutSettings.GPUSkinCacheVisualizationMenu=True
+EditorKeyboardShortcutSettings.GraphEditor=True
+EditorKeyboardShortcutSettings.IKRetarget=True
+EditorKeyboardShortcutSettings.IKRig=True
+EditorKeyboardShortcutSettings.IKRigSkeleton=True
+EditorKeyboardShortcutSettings.InsightsCommands=True
+EditorKeyboardShortcutSettings.LoadingProfilerCommands=True
+EditorKeyboardShortcutSettings.MemoryProfilerCommands=True
+EditorKeyboardShortcutSettings.NetworkingProfilerCommands=True
+EditorKeyboardShortcutSettings.TimingProfilerCommands=True
+EditorKeyboardShortcutSettings.LandscapeEditor=True
+EditorKeyboardShortcutSettings.LayersView=True
+EditorKeyboardShortcutSettings.LevelAssetEditor=True
+EditorKeyboardShortcutSettings.LevelEditor=True
+EditorKeyboardShortcutSettings.LevelEditorModes=True
+EditorKeyboardShortcutSettings.LevelInstanceEditorMode=True
+EditorKeyboardShortcutSettings.LevelSequenceEditor=True
+EditorKeyboardShortcutSettings.LevelViewport=True
+EditorKeyboardShortcutSettings.BlueprintLibraryPalette=True
+EditorKeyboardShortcutSettings.LightActor=True
+EditorKeyboardShortcutSettings.LumenVisualizationMenu=True
+EditorKeyboardShortcutSettings.MainFrame=True
+EditorKeyboardShortcutSettings.MaterialEditor=True
+EditorKeyboardShortcutSettings.MaterialEditorSpawnNodes=True
+EditorKeyboardShortcutSettings.MediaPlateEditor=True
+EditorKeyboardShortcutSettings.MediaPlayerEditor=True
+EditorKeyboardShortcutSettings.MeshPainter=True
+EditorKeyboardShortcutSettings.MeshPaint=True
+EditorKeyboardShortcutSettings.MeshPaintingTools=True
+EditorKeyboardShortcutSettings.MyBlueprint=True
+EditorKeyboardShortcutSettings.NaniteVisualizationMenu=True
+EditorKeyboardShortcutSettings.NiagaraEditor=True
+EditorKeyboardShortcutSettings.BlueprintPalette=True
+EditorKeyboardShortcutSettings.PersonaCommon=True
+EditorKeyboardShortcutSettings.PlayWorld=True
+EditorKeyboardShortcutSettings.RayTracingDebugVisualizationMenu=True
+EditorKeyboardShortcutSettings.VisualizationMenu=True
+EditorKeyboardShortcutSettings.ControlRigEditMode=True
+EditorKeyboardShortcutSettings.ControlRigBlueprint=True
+EditorKeyboardShortcutSettings.ControlRigHierarchy=True
+EditorKeyboardShortcutSettings.SCSEditorViewport=True
+EditorKeyboardShortcutSettings.SequenceRecorder.Common=True
+EditorKeyboardShortcutSettings.Sequencer=True
+EditorKeyboardShortcutSettings.ShowFlagsMenu=True
+EditorKeyboardShortcutSettings.SkeletalMeshEditor=True
+EditorKeyboardShortcutSettings.SkeletonTree=True
+EditorKeyboardShortcutSettings.SourceControl=True
+EditorKeyboardShortcutSettings.SplineComponentVisualizer=True
+EditorKeyboardShortcutSettings.StandardToolCommands=True
+EditorKeyboardShortcutSettings.StaticMeshViewportLODCmd=True
+EditorKeyboardShortcutSettings.StaticMeshEditor=True
+EditorKeyboardShortcutSettings.SystemWideCommands=True
+EditorKeyboardShortcutSettings.TakeRecorder=True
+EditorKeyboardShortcutSettings.WidgetDesigner=True
+EditorKeyboardShortcutSettings.UVEditor=True
+EditorKeyboardShortcutSettings.FVariantManagerEditorCommands=True
+EditorKeyboardShortcutSettings.EditorViewportClient=True
+EditorKeyboardShortcutSettings.VirtualShadowMapVisualizationMenu=True
+EditorKeyboardShortcutSettings.VisualLogger=True
+EditorKeyboardShortcutSettings.WaterSplineComponentVisualizer=True
+LiveCodingSettings.General=True
+LiveCodingSettings.Modules=True
+EditorLoadingSavingSettings.Startup=True
+EditorLoadingSavingSettings.AutoReimport=True
+EditorLoadingSavingSettings.Blueprints=True
+EditorLoadingSavingSettings.AutoSave=True
+EditorLoadingSavingSettings.SourceControl=True
+EditorPerProjectUserSettings.DeveloperTools=True
+EditorPerProjectUserSettings.AI=True
+EditorPerProjectUserSettings.SimplygonSwarm=True
+EditorPerProjectUserSettings.HotReload=True
+EditorPerProjectUserSettings.Import=True
+EditorPerProjectUserSettings.Export=True
+EditorPerProjectUserSettings.UnrealAutomationTool=True
+OutputLogSettings.Output Log=True
+EditorPerformanceSettings.EditorPerformance=True
+EditorPerformanceSettings.ViewportResolution=True
+InternationalizationSettingsModel.Internationalization=True
+InternationalizationSettingsModel.Time=True
+SourceCodeAccessSettings.Accessor=True
+TextureEncodingUserSettings.EncodeSpeeds=True
+VRModeSettings.General=True
+VRModeSettings.Cinematics=True
+VRModeSettings.World Movement=True
+VRModeSettings.UI Customization=True
+VRModeSettings.Motion Controllers=True
+LevelEditorMiscSettings.Editing=True
+LevelEditorMiscSettings.Sound=True
+LevelEditorMiscSettings.Levels=True
+LevelEditorMiscSettings.Screenshots=True
+LevelEditorPlaySettings.PlayInEditor=True
+LevelEditorPlaySettings.GameViewportSettings=True
+LevelEditorPlaySettings.PlayInNewWindow=True
+LevelEditorPlaySettings.PlayInStandaloneGame=True
+LevelEditorPlaySettings.Multiplayer Options=True
+LevelEditorPlaySettings.PlayOnDevice=True
+OnlinePIESettings.Logins=True
+LevelEditorViewportSettings.Controls=True
+LevelEditorViewportSettings.LookAndFeel=True
+LevelEditorViewportSettings.GridSnapping=True
+LevelEditorViewportSettings.Preview=True
+LevelEditorViewportSettings.Behavior=True
+AnimationBlueprintEditorSettings.Debugging=True
+AnimationBlueprintEditorSettings.Graphs=True
+PersonaOptions.Preview Scene=True
+PersonaOptions.Assets=True
+PersonaOptions.Viewport=True
+PersonaOptions.Audio=True
+PersonaOptions.Composites and Montages=True
+PersonaOptions.Skeleton Tree=True
+PersonaOptions.Mesh=True
+PersonaOptions.Asset Browser=True
+ContentBrowserSettings.ContentBrowser=True
+ControlRigEditorSettings.Interaction=True
+ControlRigEditorSettings.Compilation=True
+ControlRigEditorSettings.NodeGraph=True
+ControlRigEditorSettings.Viewport=True
+ControlRigEditorSettings.Hierarchy=True
+ControlRigEditorSettings.Snippets=True
+CurveEditorSettings.Curve Editor=True
+SequencerSettings.Keyframing=True
+SequencerSettings.General=True
+SequencerSettings.Timeline=True
+SequencerSettings.Snapping=True
+SequencerSettings.CurveEditor=True
+SequencerSettings.Playback=True
+FlipbookEditorSettings.Background=True
+GraphEditorSettings.GeneralStyle=True
+GraphEditorSettings.Splines=True
+GraphEditorSettings.PinColors=True
+GraphEditorSettings.NodeTitleColors=True
+GraphEditorSettings.Tracing=True
+GraphEditorSettings.ContextMenu=True
+GraphEditorSettings.CommentNodes=True
+LevelInstanceEditorPerProjectUserSettings.Create=True
+LevelInstanceEditorPerProjectUserSettings.Pivot=True
+MaterialEditorSettings.Offline Shader Compilers=True
+MaterialEditorSettings.User Interface Domain=True
+MeshPaintSettings.Visualization=True
+MetasoundEditorSettings.AssetMenu=True
+MetasoundEditorSettings.General=True
+MetasoundEditorSettings.PinColors=True
+MetasoundEditorSettings.NodeTitleColors=True
+MetasoundEditorSettings.GraphAnimation=True
+SkeletalMeshEditorSettings.AnimationPreview=True
+SpriteEditorSettings.Background=True
+TakeRecorderUserSettings.User Settings=True
+TileMapEditorSettings.Background=True
+TileMapEditorSettings.Grid=True
+TileSetEditorSettings.Background=True
+TileSetEditorSettings.Tile Editor=True
+TileSetEditorSettings.Tile Sheet Conditioning=True
+WidgetDesignerSettings.GridSnapping=True
+WidgetDesignerSettings.Dragging=True
+WidgetDesignerSettings.Visuals=True
+WidgetDesignerSettings.Interaction=True
+BlueprintHeaderViewSettings.Settings=True
+FractureModeCustomizationSettings.Fracture Mode=True
+LightMixerEditorSettings.Light Mixer=True
+ObjectMixerEditorSettings.Object Mixer=True
+PythonScriptPluginUserSettings.Python=True
+CrashReportsPrivacySettings.Options=True
+AnalyticsPrivacySettings.Options=True
+AutomationTestSettings.Loading=True
+AutomationTestSettings.Automation=True
+AutomationTestSettings.Open Asset Tests=True
+AutomationTestSettings.PIE Test Maps=True
+AutomationTestSettings.Play all project Maps In PIE=True
+AutomationTestSettings.MiscAutomationSetups=True
+AutomationTestSettings.ExternalTools=True
+AutomationTestSettings.Screenshots=True
+CrashReporterSettings.CrashReporter=True
+DataValidationSettings.Validation Scenarios=True
+GameplayDebuggerUserSettings.GameplayDebugger=True
+GameplayTagsDeveloperSettings.GameplayTags=True
+LogVisualizerSettings.VisualLogger=True
 
 [WorldBrowser]
 DisplayPaths=False
 DisplayActorsCount=False
 
 [RootWindow]
-ScreenPosition=X=139.000 Y=18.000
+ScreenPosition=X=195.000 Y=110.000
 WindowSize=X=1290.000 Y=730.000
 InitiallyMaximized=True
 
@@ -1967,7 +2213,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [MessageLog]
-LastLogListing=BlueprintLog
+LastLogListing=PIE
 
 [PlacementMode]
 RecentlyPlaced=/Game/influence/Environment_Assets/doorway/Doorway_SM.Doorway_SM;
@@ -3014,6 +3260,8 @@ BlueprintGraph.TimeStamp=2023.11.01-18.11.46
 BlueprintGraph.LastCompileMethod=Unknown
 AnimationEditor.TimeStamp=2023.11.01-18.11.45
 AnimationEditor.LastCompileMethod=Unknown
+DataTableEditor.TimeStamp=2023.11.01-18.11.46
+DataTableEditor.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
@@ -3264,13 +3512,69 @@ Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 BrushComponent="\"Object\" "
 StaticMesh="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[3]\" "
 StreamableRenderAsset="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[3]\" "
-Blueprint="\"Object\" "
-BlueprintCore="\"Object\" "
+Blueprint=
+BlueprintCore=
 Invetory_C="\"Object\" "
 DataTable="\"Object\" "
 K2Node_SetFieldsInStruct="\"Object\" "
 K2Node_MakeStruct="\"Object\" "
 K2Node_StructMemberSet="\"Object\" "
+TextRenderComponent="\"Object\" "
+EditorStyleSettings="\"Object\" "
+SlateThemeManager="\"Object\" "
+AudioEditorSettings="\"Object\" "
+BlueprintEditorSettings="\"Object\" "
+EnhancedInputEditorSettings="\"Object\" "
+EditorExperimentalSettings="\"Object\" "
+EditorSettings="\"Object\" "
+LiveCodingSettings="\"Object\" "
+EditorLoadingSavingSettings="\"Object\" \"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
+EditorPerProjectUserSettings="\"Object\" "
+OutputLogSettings="\"Object\" "
+EditorPerformanceSettings="\"Object\" "
+InternationalizationSettingsModel="\"Object\" "
+SourceCodeAccessSettings="\"Object\" "
+TextureEncodingUserSettings="\"Object\" "
+VRModeSettings="\"Object\" "
+VISettings="\"Object\" "
+LevelEditorMiscSettings="\"Object\" "
+LevelEditorPlaySettings="\"Object\" "
+OnlinePIESettings="\"Object\" "
+LevelEditorViewportSettings="\"Object\" "
+AnimationBlueprintEditorSettings="\"Object\" "
+PersonaOptions="\"Object\" "
+ContentBrowserSettings="\"Object\" "
+ControlRigEditorSettings="\"Object\" "
+CurveEditorSettings="\"Object\" "
+SequencerSettings="\"Object\" "
+FlipbookEditorSettings="\"Object\" "
+GraphEditorSettings="\"Object\" "
+LevelInstanceEditorPerProjectUserSettings="\"Object\" "
+MaterialEditorSettings="\"Object\" "
+MeshPaintSettings="\"Object\" "
+MetasoundEditorSettings="\"Object\" "
+SkeletalMeshEditorSettings="\"Object\" "
+SpriteEditorSettings="\"Object\" "
+TakeRecorderUserSettings="\"Object\" "
+TileMapEditorSettings="\"Object\" "
+TileSetEditorSettings="\"Object\" "
+WidgetDesignerSettings="\"Object\" "
+BlueprintHeaderViewSettings="\"Object\" "
+FractureModeCustomizationSettings="\"Object\" "
+LightMixerEditorSettings="\"Object\" "
+ObjectMixerEditorSettings="\"Object\" "
+PythonScriptPluginUserSettings="\"Object\" "
+CrashReportsPrivacySettings="\"Object\" \"Object.Options.bSendUnattendedBugReports\" "
+AnalyticsPrivacySettings="\"Object\" \"Object.Options.bSendUsageData\" "
+AutomationTestSettings="\"Object\" "
+CrashReporterSettings="\"Object\" "
+DataValidationSettings="\"Object\" "
+GameplayDebuggerUserSettings="\"Object\" "
+GameplayTagsDeveloperSettings="\"Object\" "
+LogVisualizerSettings="\"Object\" "
+LevelScriptBlueprint=
+WorldSettings="\"Object.Lightmass.LightmassSettings\" "
+Info="\"Object.Lightmass.LightmassSettings\" "
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -3360,6 +3664,7 @@ ModelingComponentsSettings=True
 PaperRuntimeSettings=True
 TcpMessagingSettings=True
 WmfMediaSettings=True
+EditorStyleSettings=True
 
 [AssetEditorToolkitTabLocation]
 /Game/90s_Style_Graphics/Materials/Masters/Material_Master.Material_Master=1
@@ -3402,6 +3707,8 @@ WmfMediaSettings=True
 /Game/influence/AdriaanDevPlace/NewInfuence_Coree/Char/Inventory_syst/Invetory.Invetory=1
 /Game/influence/AdriaanDevPlace/NewInfuence_Coree/Char/Inventory_syst/INF_DT.INF_DT=1
 /Game/influence/AdriaanDevPlace/NewInfuence_Coree/Char/Inventory_syst/Inventory_Struct.Inventory_Struct=1
+/Game/influence/Environment_Assets/doorway/Doorway.Doorway=1
+/Game/influence/Environment_Assets/doorway/Doorway_SM.Doorway_SM=1
 
 [MaterialEditor]
 PrimType=1
@@ -3765,6 +4072,7 @@ CameraComponent.CameraOptions=False
 SkeletalMeshComponent.Physics=True
 SceneComponent.ComponentTick=True
 K2Node_VariableGet.Variable=False
+WorldSettings.World=True
 
 [UMGEditor.Designer]
 PreviewWidth=1280
