Added lights to sea the new assets XD
Lool

--- a/InfluencePackage/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/InfluencePackage/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -343,7 +343,7 @@ K2Node_FunctionResult=Camera_C.Physics.ConstraintsGroup,CameraComponent.PostProc
 LastLevel=/Game/influence/AdriaanDevPlace/MAP/DevMapAdriaan
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [ContentBrowserRecent]
 MRUItem0=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Char/Inventory_syst/Invetory
@@ -2213,9 +2213,10 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=LoadErrors
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Game/influence/Environment_Assets/doorway/Doorway_SM.Doorway_SM;
 RecentlyPlaced=/Game/influence/Environment_Assets/doorway/Doorway_Skeleton.Doorway_Skeleton;
 RecentlyPlaced=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Char/Inv_Items/keys/key1.key1;
@@ -2225,7 +2226,6 @@ RecentlyPlaced=/Game/influence/Environment_Assets/Door/BP_Door.BP_Door;
 RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
 RecentlyPlaced=/Game/influence/Props/Weapons/alternate_sig_sauer__sights.alternate_sig_sauer__sights;
 RecentlyPlaced=/Game/influence/Props/Weapons/alternate_sig_sauer__handle.alternate_sig_sauer__handle;
-RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Script/Engine.TextRenderActor;/Engine/Transient.ActorFactoryTextRender_0
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Enemy/Enemy_Main.Enemy_Main;
