--- a/InfluencePackage/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/InfluencePackage/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -304,7 +304,7 @@ Camera_C=Camera_C.Physics.ConstraintsGroup,
 SkeletalMeshComponent=Camera_C.Physics.ConstraintsGroup,CameraComponent.PostProcess.Lens,SkeletalMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,
 StaticMeshComponent=Camera_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,CameraComponent.PostProcess.Lens,SkeletalMeshComponent.Collision.Collision,
 K2Node_VariableGet=Camera_C.Physics.ConstraintsGroup,CameraComponent.PostProcess.Lens,SkeletalMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,
-SceneComponent=
+SceneComponent=Camera_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,CameraComponent.PostProcess.Lens,SkeletalMeshComponent.Collision.Collision,
 NewCam_C=Camera_C.Physics.ConstraintsGroup,
 Test_House_C=Camera_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,CameraComponent.PostProcess.Lens,SkeletalMeshComponent.Collision.Collision,
 CamSwitch_C=Camera_C.Physics.ConstraintsGroup,CameraComponent.PostProcess.Lens,SkeletalMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,
