--- a/InfluencePackage/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/InfluencePackage/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -347,11 +347,6 @@ LastLevel=/Game/influence/AdriaanDevPlace/MAP/DevMapAdriaan
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Enemy/AI_Brainstuff/Brain/Enemy_CTR_Main.Enemy_CTR_Main
-OpenAssetsAtExit=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Enemy/Enemy_Main.Enemy_Main
-OpenAssetsAtExit=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Enemy/AI_Brainstuff/BHT/BB_Enemy.BB_Enemy
-OpenAssetsAtExit=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Enemy/AI_Brainstuff/BHT/BHT_Enemy.BHT_Enemy
-OpenAssetsAtExit=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Enemy/AI_Brainstuff/EQS/EQS_FindPlayer.EQS_FindPlayer
 
 [ContentBrowserRecent]
 MRUItem0=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Enemy/AI_Brainstuff/EQS/EQS_FindPlayer
@@ -388,7 +383,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.749049664
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Enemy
+ContentBrowserDrawer.SelectedPaths=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Enemy/Charger
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -2305,6 +2300,7 @@ BTTask_RunEQSQuery.EQS=True
 BTTask_RunEQSQuery.Blackboard=True
 BTTask_RunEQSQuery.Task=True
 BTTask_RunEQSQuery.Description=True
+FbxImportUI.Animation=True
 
 [WorldBrowser]
 DisplayPaths=False
@@ -2329,7 +2325,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [MessageLog]
-LastLogListing=LoadErrors
+LastLogListing=FBXImport
 
 [PlacementMode]
 RecentlyPlaced=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Enemy/EQSTester.EQSTester;
